--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.6",
+    "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
+    "pinia": "^2.0.23",
     "vue": "^3.2.41",
     "vue-router": "^4.1.5"
   },
